deployment/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doctor-booking
  labels:
    name: doctor-booking
    environment: base
